<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_define"
    tools:context=".ui.account.AccountFragment">

    <LinearLayout
        android:id="@+id/account_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/account_topbar"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/account_top_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/account_top_icon"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="@+id/account_topbar"
            app:layout_constraintTop_toTopOf="@+id/account_topbar" />

        <TextView
            android:id="@+id/account_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="Account type:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:fontFamily="@font/alibaba_extrabold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.0" />
        <TextView
            android:id="@+id/account_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/alibaba_regular"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintRight_toRightOf="@id/account_top"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/account_mid"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/account_topbar"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/account_mid_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/personal_info_icon"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/account_mid_icon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/account_mid_icon"
            android:fontFamily="@font/alibaba_extrabold"
            android:text="Login information"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/account_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_mid_icon"
            android:layout_alignLeft="@+id/account_mid_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alibaba_light"
            android:text="Name:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_mid_icon"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/alibaba_light"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_login_name"
            android:layout_alignLeft="@+id/account_mid_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alibaba_light"
            android:text="E-mail:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_name_info"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/alibaba_light"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_login_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_login_email"
            android:layout_alignLeft="@+id/account_mid_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/alibaba_light"
            android:text="Mobile:"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/account_mobile_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_email_info"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/alibaba_light"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
